--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @media  screen and (min-width: 400px) {
     .corpo{
 
-    background-color: rgb(127, 255, 191);
+    background-color: rgba(50, 14, 208, 0.868);
 }
 
 .título{
