--- a/o-que-é.css
+++ b/o-que-é.css
@@ -4,12 +4,12 @@
 
 .título{
     color: black;
-    font-size: 40px;
+    font-size: 45px;
 }
 
-.paragráfo{
+.parágrafo{
     color: rgb(255, 255, 255);
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .subtítulo{
