--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@
 @media  screen and (min-width: 400px) {
     .corpo{
 
-    background-color: rgba(50, 14, 208, 0.868);
+    background-image: rgba(130, 209, 255, 0.801) rgba(19, 102, 255, 0.945);
 }
 
 .título{
-    color: rgb(0, 0, 0);
+    color: rgb(46, 128, 175);
     font-size: 50px;
 
 }
 
 .link{
-    color: aqua;
+    color: rgb(8, 103, 167);
     font-size: 20px;
 }
     
