--- a/o-que-é.css
+++ b/o-que-é.css
@@ -1,5 +1,5 @@
 .corpo{
-    background-color: rgb(36, 0, 218);
+    background-image: rgba(130, 209, 255, 0.801) rgba(19, 102, 255, 0.945);
 }
 
 .título{
